--- a/04_dom_events/index.html
+++ b/04_dom_events/index.html
@@ -36,8 +36,8 @@
         <label class="form-label"><strong>Name: </strong></label>
         <input type="text" id="name-input" />
 
-        <!-- <label class="form-label"><strong>Image: </strong></label>
-        <input type="text" id="img-input" /> -->
+        <label class="form-label"><strong>Image: </strong></label>
+        <input type="text" id="img-input" />
 
         <input type="submit" value="Submit" />
       </form>
